# arkulib

./: CMakeLists.txt  README.md
.github/workflows/: build_and_run_tests.yml
docs/: CMakeLists.txt  Doxyfile-html.cmake
include/: Constant.hpp  Documentation.hpp  ERational.hpp  Modes.hpp  Rational.hpp  test.hpp
include/Exceptions/: DigitsTooLargeException.hpp  DivideByZeroException.hpp  Exceptions.hpp  FloatTypeGiven.hpp  FloatTypeGivenException.hpp  IntTypeGivenException.hpp  InvalidAccessArgumentException.hpp  NegativeSqrtException.hpp  NumberTooLargeException.hpp
include/Tools/: ERationalVerif.hpp  Utils.hpp
src/: main.cpp
tests/: CMakeLists.txt  Sqrt.cpp  addition.cpp  comparaison.cpp  constructor.cpp  conversion.cpp  cosine.cpp  division.cpp  exponential.cpp  getter.cpp  multiplication.cpp  pow.cpp  setter.cpp  sqrt.cpp  status.cpp  subtraction.cpp
tests/ERational/: addition.cpp  constructors.cpp  division.cpp  multiplication.cpp  subtraction.cpp
tests/Rational/: addition.cpp  comparaison.cpp  constructor.cpp  conversion.cpp  cosine.cpp  division.cpp  exponential.cpp  getter.cpp  minmax.cpp  multiplication.cpp  pow.cpp  setter.cpp  sqrt.cpp  status.cpp  subtraction.cpp
